--- a/src/Hackathon_CV_Portal.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "პაროლის აღდგენა";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    თქვენი პაროლი შეიცვალა. გთხოვთ <a asp-action="Login">დააჭიროთ, რომ გაიროთ ავტორიზაცია</a>.
-</p>
+<div class="row d-flex justify-content-center align-items-center h-100">
+    <p>
+        თქვენი პაროლი შეიცვალა. გთხოვთ <a asp-action="Login">დააჭიროთ, რომ გაიროთ ავტორიზაცია</a>.
+    </p>
+</div>
