--- a/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
@@ -1,15 +1,18 @@
-﻿    
+﻿@{
+    ViewData["Title"] = "Re:Hire";
+}
+
 <div class="container">
-        <div class="row justify-content-start">
-            <div class="col-10 col-lg-8">
-                <h1 class="display-3 text-black animated slideInDown mb-4">იპოვე თქვენთვის სასურველი სამსაური</h1>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">მოძებნე სამსახური</a>
-                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">მოძებნე ტალანტი</a>
-            </div>
+    <div class="row justify-content-start">
+        <div class="col-10 col-lg-8">
+            <h1 class="display-3 text-black animated slideInDown mb-4">იპოვე თქვენთვის სასურველი სამსაური</h1>
+            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">მოძებნე სამსახური</a>
+            <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">მოძებნე ტალანტი</a>
         </div>
     </div>
+</div>
 
-         @* <!-- Search Start -->
+@* <!-- Search Start -->
         <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
             <div class="container">
                 <div class="row g-2">
@@ -42,7 +45,7 @@
                 </div>
             </div>
         </div>*@
-        <!-- Search End -->
+<!-- Search End -->
 
 <div class="container-xxl py-5">
     <div class="container">
