--- a/src/Hackathon_CV_Portal.Web/Views/Home/NotFound.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/NotFound.cshtml
@@ -1,12 +1,16 @@
-﻿    <body>
-        <div class="d-flex align-items-center justify-content-center vh-100">
-            <div class="text-center">
-                <h1 class="display-1 fw-bold">404</h1>
-                <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
-                <p class="lead">
-                    The page you’re looking for doesn’t exist.
-                  </p>
-                <a asp-controller="Home" asp-action="Idex" class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
-            </div>
+﻿@{
+    ViewData["Title"] = "NotFound";
+}
+
+<body>
+    <div class="d-flex align-items-center justify-content-center vh-100">
+        <div class="text-center">
+            <h1 class="display-1 fw-bold">404</h1>
+            <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
+            <p class="lead">
+                The page you’re looking for doesn’t exist.
+            </p>
+            <a asp-controller="Home" asp-action="Idex" class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
         </div>
-    </body>
+    </div>
+</body>
