--- a/src/Hackathon_CV_Portal.Web/Views/Account/ResetPassword.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/ResetPassword.cshtml
@@ -4,34 +4,39 @@
     ViewData["Title"] = "პაროლის აღდგენა";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>პაროლის აღდგენა.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <input asp-for="Code" type="hidden" />
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+<section class="vh-100 gradient-custom">
+    <div class="container py-5">
+        <div class="row d-flex">
+            <div class="col-12  ">
+                <h2>@ViewData["Title"]</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <form method="post">
+                            <div asp-validation-summary="All" class="text-danger"></div>
+                            <input asp-for="Code" type="hidden" />
+                            <div class="form-group">
+                                <label asp-for="Email"></label>
+                                <input asp-for="Email" class="form-control" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Password"></label>
+                                <input asp-for="Password" class="form-control" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="ConfirmPassword"></label>
+                                <input asp-for="ConfirmPassword" class="form-control" />
+                                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                            </div>
+                            <button type="submit" class="btn btn-default">აღდგენა</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Reset</button>
-        </form>
+        </div>
     </div>
-</div>
-
+</section>
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
 }
