--- a/src/Hackathon_CV_Portal.Web/Views/Contact/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Contact/Index.cshtml
@@ -1,69 +1,72 @@
-﻿        <!-- Contact Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">დაგვიკავშირდით ნებისმიერი საკითხის შემთხვევაში</h1>
-                <div class="row g-4">
-                    <div class="col-12">
-                        <div class="row gy-4">
-                            <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
-                                <div class="d-flex align-items-center bg-light rounded p-4">
-                                    <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3" style="width: 45px; height: 45px;">
-                                        <i class="fa fa-map-marker-alt text-primary"></i>
-                                    </div>
-                                    <span>1187a ნუცუბიძის ქუჩა, თბილისი 0186</span>
-                                </div>
+﻿@{
+    ViewData["Title"] = "კონტაქტი";
+}
+
+<div class="container-xxl py-5">
+    <div class="container">
+        <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">დაგვიკავშირდით ნებისმიერი საკითხის შემთხვევაში</h1>
+        <div class="row g-4">
+            <div class="col-12">
+                <div class="row gy-4">
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3" style="width: 45px; height: 45px;">
+                                <i class="fa fa-map-marker-alt text-primary"></i>
                             </div>
-                            <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
-                                <div class="d-flex align-items-center bg-light rounded p-4">
-                                    <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3" style="width: 45px; height: 45px;">
-                                        <i class="fa fa-envelope-open text-primary"></i>
-                                    </div>
-                                    <span>taoba@taoba.org.ge</span>
-                                </div>
-                            </div>
-                            <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
-                                <div class="d-flex align-items-center bg-light rounded p-4">
-                                    <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3" style="width: 45px; height: 45px;">
-                                        <i class="fa fa-phone-alt text-primary"></i>
-                                    </div>
-                                    <span> +995 595 55 16 16</span>
-                                </div>
-                            </div>
+                            <span>1187a ნუცუბიძის ქუჩა, თბილისი 0186</span>
                         </div>
                     </div>
-                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7403979846913!2d44.7221719156637!3d41.72612038288986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044730a51b3d4a7%3A0x7811affb5ef51f2f!2s1187a%2C%20186%20Shalva%20Nutsubidze%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1657948507896!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.3s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3" style="width: 45px; height: 45px;">
+                                <i class="fa fa-envelope-open text-primary"></i>
+                            </div>
+                            <span>taoba@taoba.org.ge</span>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="wow fadeInUp" data-wow-delay="0.5s">
-                            <form>
-                                <div class="row g-3">
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                            <label for="name">სახელი </label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                            <label for="email">ელ-ფოსტა </label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
-                                            <label for="message">ტექსტი</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <button class="btn btn-primary w-100 py-3" type="submit">გაგზავნა</button>
-                                    </div>
-                                </div>
-                            </form>
+                    <div class="col-md-4 wow fadeIn" data-wow-delay="0.5s">
+                        <div class="d-flex align-items-center bg-light rounded p-4">
+                            <div class="bg-white border rounded d-flex flex-shrink-0 align-items-center justify-content-center me-3" style="width: 45px; height: 45px;">
+                                <i class="fa fa-phone-alt text-primary"></i>
+                            </div>
+                            <span> +995 595 55 16 16</span>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.7403979846913!2d44.7221719156637!3d41.72612038288986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044730a51b3d4a7%3A0x7811affb5ef51f2f!2s1187a%2C%20186%20Shalva%20Nutsubidze%20St%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1657948507896!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="col-md-6">
+                <div class="wow fadeInUp" data-wow-delay="0.5s">
+                    <form>
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                    <label for="name">სახელი </label>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-floating">
+                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                    <label for="email">ელ-ფოსტა </label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
+                                    <label for="message">ტექსტი</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary w-100 py-3" type="submit">გაგზავნა</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <!-- Contact End -->
+    </div>
+</div>
+<!-- Contact End -->
