--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
@@ -25,25 +25,26 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="CategoryId"></label>
-                     <select asp-for="CategoryId" class="form-control" multiple asp-items="ViewBag.Categories"></select>
-@*                        <select id="types" class=" form-control form-select" name="cars">
-                            <option class="dropdown-item" value="1">PartTime</option>
-                            <option value="2">FullTime</option>
-                        </select>*@
+                    <select asp-for="CategoryId" class="form-control form-select"  asp-items="ViewBag.Categories">
+                        <option value="0">აირჩიეთ კატეგორია</option>
+                     </select>
                     <span asp-validation-for="CategoryId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Type"></label>
-                                           <select id="types" class=" form-control form-select" name="cars">
-                            <option class="dropdown-item" value="1">PartTime</option>
-                            <option value="2">FullTime</option>
+                        <select id="types" class=" form-control form-select" name="cars">
+                            <option value="0">აირჩიეთ ტიპი</option>
+                            <option class="dropdown-item" value="1">სრული განაკვეთი</option>
+                            <option class="dropdown-item" value="2">ნახევარი განაკვეთი</option>
                         </select>
                     <span asp-validation-for="Type" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Location"></label>
-                    <input asp-for="Location" class="form-control"/>
-                    <span asp-validation-for="Location" class="text-danger"></span>
+                    <label asp-for="LocationId"></label>
+                    <select asp-for="LocationId" class="form-control form-select"  asp-items="ViewBag.Locations">
+                        <option value="0">აირჩიეთ მისამართი</option>
+                    </select>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="SalaryRange"></label>
