--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Create.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/Create.cshtml
@@ -1,18 +1,18 @@
 ﻿@using Hackathon_CV_Portal.Application.Implementations.Cv.Models;
 @model CvVM
 @{
-    ViewData["Title"] = "დაარედაქტირე CV";
+    ViewData["Title"] = "შექმენი CV";
 }
 
 <div class="row">
     <div class="col-md-8 offset-2">
         <p>
-            <h4 class="text-center">დაარედაქტირე CV</h4>
+            <h4 class="text-center">შექმენი CV</h4>
         </p>
 
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Update" method="post">
+                <form asp-action="Create" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="row">
@@ -63,7 +63,7 @@
                     </div>
 
                      <div class="form-group">
-                        <input type="submit" value="შენახვა" class="btn btn-outline-success float-right" />
+                        <input type="submit" value="დამატება" class="btn btn-outline-success float-right" />
                     </div>
                 </form>
             </div>
