--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
@@ -16,16 +16,16 @@
             @if (@Model.WithFil)
             {
                 <!-- Search Start -->
-                <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
-                    <div class="container">
+                <div class="container-fluid mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
+                    <div class="container-fluid">
                         <div class="row g-2">
-                            <div class="col-md-10">
+                            <div class="col-md-12">
                                 <div class="row g-2">
                                     @* <div class="col-md-4">
                                 <input type="text" id="KeywordInput" class="form-control border-0" placeholder="ტექსტი" />
                                 </div> *@
-                                    <div class="col-md-4">
-                                        <select id="CategoryInput" class="form-select border-0">
+                                    <div class="col-md-3 border border-primary mr-2 rounded-pill">
+                                        <select id="CategoryInput" class="form-select rounded-pill border-0">
                                             <option value="0" selected>ყველა კატეგორია</option>
                                             @foreach (var category in Model.Categories)
                                             {
@@ -33,8 +33,8 @@
                                             }
                                         </select>
                                     </div>
-                                    <div class="col-md-4">
-                                        <select id="LocationInput" class="form-select border-0">
+                                    <div class="col-md-3 border border-primary mr-2 rounded-pill">
+                                        <select id="LocationInput" class="form-select rounded-pill border-0">
                                             <option selected value="0">ყველა მისამართი</option>
                                             @foreach (var location in Model.Locations)
                                             {
@@ -42,13 +42,11 @@
                                             }
                                         </select>
                                     </div>
-                                    <div class="col-md-4">
-                                        <input type="text" id="KeywordInput" class="form-control border-0" placeholder="ტექსტი" />
+                                    <div class="col-md-3 border border-primary mr-2 rounded-pill">
+                                        <input type="text" id="KeywordInput" class="form-control rounded-pill border-0" placeholder="ტექსტი" />
                                     </div>
+                                     <button style="width:10%" onclick="GetVacancesBySearch()" class=" border-start-0 rounded-pill btn btn-dark border-0"><i class="fa fa-search"></i></button>
                                 </div>
-                            </div>
-                            <div class="col-md-2">
-                                <button onclick="GetVacancesBySearch()" class=" border-start-0 rounded-pill ms-n3 btn btn-dark border-0 w-50"><i class="fa fa-search"></i></button>
                             </div>
                         </div>
                     </div>
