--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
@@ -9,70 +9,101 @@
 <div class="row">
     <div class="col-md-6 offset-lg-3 offset-md-2">
         <div class="row">
-            <div class="col-md-8 offset-lg-2 offset-md-1">
-                <form asp-action="Add" method="post">
-                    @Html.AntiForgeryToken() 
-                <hr />
-                <div class="form-group">
-                    <label asp-for="Title"></label>
-                    <input asp-for="Title" class="form-control" type="text"/>
-                    <span asp-validation-for="Title" class="text-danger"></span>
+            <p>
+            <h4 class="text-center">შექმენი ვაკანსია</h4>
+            </p>
+            <div class="row">
+                <div class="col-md-8 offset-2">
+                    <form asp-action="Add" method="post">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="Title" class="control-label"></label>
+                                    <span class="text-danger">*</span>
+                                    <input asp-for="Title" class="form-control" />
+                                    <span asp-validation-for="Title" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Email" class="control-label"></label>
+                                    <span class="text-danger">*</span>
+                                    <input asp-for="Email" class="form-control" />
+                                    <span asp-validation-for="Email" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Type"></label>
+                                    <span class="text-danger">*</span>
+                                    <select asp-for="Type" class="custom-select mr-sm-2" asp-items="ViewBag.Types">
+                                        <option value="0">აირჩიეთ ტიპი</option>
+                                    </select>
+                                    <span asp-validation-for="Type" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="LocationId"></label>
+                                    <span class="text-danger">*</span>
+                                    <select asp-for="LocationId" class="custom-select mr-sm-2"
+                                        asp-items="ViewBag.Locations">
+                                        <option value="0">აირჩიეთ მისამართი</option>
+                                    </select>
+                                    <span asp-validation-for="LocationId" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label asp-for="CompanyName" class="control-label"></label>
+                                    <span class="text-danger">*</span>
+                                    <input asp-for="CompanyName" class="form-control" />
+                                    <span asp-validation-for="CompanyName" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="DeadLine" class="control-label"></label>
+                                    <span class="text-danger">*</span>
+                                    <input asp-for="DeadLine" type="date" class="form-control" />
+                                    <span asp-validation-for="DeadLine" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="CategoryId"></label>
+                                    <span class="text-danger">*</span>
+                                    <select asp-for="CategoryId" class="custom-select mr-sm-2"
+                                        asp-items="ViewBag.Categories">
+                                        <option value="0">აირჩიეთ კატეგორია</option>
+                                    </select>
+                                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="SalaryRange"></label>
+                                    <small class="text-muted">
+                                        მაგ: 100-200 ₾
+                                    </small>
+                                    <input asp-for="SalaryRange" class="form-control" value="შეთანხმებით" />
+                                </div>
+                            </div>
+
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label asp-for="Description"></label>
+                                    <span class="text-danger">*</span>
+                                    <input asp-for="Description" class="form-control" />
+                                    <span asp-validation-for="Description" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Responsibility"></label>
+                                    <span class="text-danger">*</span>
+                                    <input asp-for="Responsibility" class="form-control" />
+                                    <span asp-validation-for="Responsibility" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Qualifications"></label>
+                                    <span class="text-danger">*</span>
+                                    <input asp-for="Qualifications" class="form-control" />
+                                    <span asp-validation-for="Qualifications" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="დამატება" class="btn btn-outline-success float-right" />
+                        </div>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label asp-for="CompanyName"></label>
-                    <input asp-for="CompanyName" class="form-control" type="text"/>
-                    <span asp-validation-for="CompanyName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="CategoryId"></label>
-                    <select asp-for="CategoryId" class="form-control form-select"  asp-items="ViewBag.Categories">
-                        <option value="0">აირჩიეთ კატეგორია</option>
-                     </select>
-                    <span asp-validation-for="CategoryId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Type"></label>
-                    <select asp-for="Type" class="form-control form-select"  asp-items="ViewBag.Types">
-                        <option value="0">აირჩიეთ ტიპი</option>
-                     </select>
-                    <span asp-validation-for="Type" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="LocationId"></label>
-                    <select asp-for="LocationId" class="form-control form-select"  asp-items="ViewBag.Locations">
-                        <option value="0">აირჩიეთ მისამართი</option>
-                    </select>
-                    <span asp-validation-for="CategoryId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="SalaryRange"></label><h7>   მაგ: 1000-2000 ₾ </h7>
-                    <input asp-for="SalaryRange" class="form-control"/>
-                    <h7>თუ არ შეავსებთ მიენიჭება მნიშვნელობა : შეთანხმებით</h7>
-                </div>
-                <div class="form-group">
-                    <label asp-for="DeadLine"></label>
-                    <input asp-for="DeadLine" type="date" class="form-control"/>
-                    <span asp-validation-for="DeadLine" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Description"></label>
-                    <input asp-for="Description" class="form-control"/>
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Responsibility"></label>
-                    <input asp-for="Responsibility" class="form-control"/>
-                    <span asp-validation-for="Responsibility" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Qualifications"></label>
-                    <input asp-for="Qualifications" class="form-control"/>
-                    <span asp-validation-for="Qualifications" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary"> ვაკანსიის დამატება</button>
-                </div>
-            </form>
             </div>
         </div>
     </div>
