--- a/src/Hackathon_CV_Portal.Web/Views/Location/AddLocation.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Location/AddLocation.cshtml
@@ -1,10 +1,13 @@
 ﻿@using Hackathon_CV_Portal.Web.Models.LocationModel
 @model CreateLocationDto
 @{
-    ViewData["Title"] = "დაამატე მისამართი";
+    ViewData["Title"] = "დაამატე ლოკაცია";
 }
 <div class="row text">
     <div class="col-md-8 offset-2">
+         <p>
+            <h1 class="text-center">დაამატე ლოკაცია</h1>
+        </p>
         <div class="row">
             <div class="col-md-8 offset-2">
                 <form asp-action="AddLocation" method="post">
