add google and facebook services

--- a/src/Hackathon_CV_Portal.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "პაროლის აღდგენა";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+<section class="vh-100 gradient-custom">
+    <div class="container py-5 ">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-8 ">
+                    <h1>
+                       გთხოვთ შეამოწმოთ თქვენი მეილი.
+                    </h1>
+            </div>
+        </div>
+    </div>
+</section>
