--- a/src/Hackathon_CV_Portal.Web/wwwroot/css/style.css
+++ b/src/Hackathon_CV_Portal.Web/wwwroot/css/style.css
@@ -32,7 +32,7 @@
 
 /*** Button ***/
 .btn {
-    font-family: 'Inter', sans-serif;
+    font-family: 'firago';
     font-weight: 600;
     transition: .5s;
 }
@@ -73,7 +73,7 @@
 .navbar .dropdown-toggle::after {
     border: none;
     content: "\f107";
-    font-family: "Font Awesome 5 Free";
+    font-family: 'firago'; 
     font-weight: 900;
     vertical-align: middle;
     margin-left: 5px;
@@ -356,7 +356,7 @@
 .footer .btn.btn-link::before {
     position: relative;
     content: "\f105";
-    font-family: "Font Awesome 5 Free";
+    font-family: 'firago';
     font-weight: 900;
     margin-right: 10px;
 }
